Fix card auto spacing feature... for now...

--- a/pages/public/css/style.css
+++ b/pages/public/css/style.css
@@ -76,7 +76,7 @@ input[type=checkbox] {
 	position: absolute;
 	top: 50%;
 	left: 30%;
-	margin-left: 0px;
+	margin-left: 0;
 	margin-top: -25px;
 }
 
